added sqlalchemy in the requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-adium-theme-ubuntu==0.3.4
-ccsm==0.9.12.2
-compizconfig-python==0.9.12.2
-ecdsa==0.13
-mysql-connector-python==2.0.4
-mysql-utilities==1.6.1
-paramiko==1.16.0
-pexpect==4.0.1
-psutil==3.4.2
-ptyprocess==0.5
-pycrypto==2.6.1
-pycurl==7.43.0
-pyodbc==3.0.7
-pysqlite==2.7.0
-python-apt==1.1.0b1
-six==1.10.0
-unity-lens-photos==1.0
-virtualenv==15.1.0
+alembic==0.9.5
+click==6.7
+Flask==0.12.2
+Flask-Migrate==2.1.1
+Flask-SQLAlchemy==2.2
+Flask-WTF==0.14.2
+itsdangerous==0.24
+Jinja2==2.9.6
+Mako==1.0.7
+MarkupSafe==1.0
+psycopg2==2.7.3.1
+python-dateutil==2.6.1
+python-editor==1.0.3
+six==1.11.0
+SQLAlchemy==1.1.14
+Werkzeug==0.12.2
+WTForms==2.1
